k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: cave-enki-backend
  name: cave-enki-backend
  namespace: cave-enki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cave-enki-backend
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cave-enki-backend
    spec:
      containers:
      - image: taghuofongue/cave-enki-backend:1.0
        name: cave-enki-backend
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
#        resources:
#          limits:
#            cpu: 0.2
#            memory: "200Mi"
status: {}
