k8s/cave-enki-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cave-enki-backend
  name: cave-enki-backend
  namespace: cave-enki
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    # nodePort: 30001
  selector:
    app: cave-enki-backend
  # type: NodePort
  type: LoadBalancer
  loadBalancerIP: "35.187.163.19"
status:
  loadBalancer: {}
