k8s/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cave-enki
  name: mysqldb
  namespace: cave-enki
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: cave-enki
    tier: mysql
status:
  loadBalancer: {}
