k8s/ingress-deploy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cave-enki-ingress
  namespace: cave-enki
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cave-enki-ip
spec:
  rules:
    - host: cave-enki
      http:
        paths:
          - path: /backend
            backend:
              serviceName: cave-enki-backend
              servicePort: 8080
          # - pathType: Prefix
          #   path: "/"
          #   backend:
          #     service:
          #       name: cave-enki-frontend
          #       port:
          #         number: 8080
